objects/JBCXM__GSLRMHeader__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <label>ASV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GSLRMHeader</relationshipLabel>
        <relationshipName>GSLRMHeader</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__BookingDate__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__BookingType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Type</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>GSBooking Type</relationshipLabel>
        <relationshipName>GSBookingType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>GSCustomer</relationshipLabel>
        <relationshipName>GSCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ExternalSourceId__c</fullName>
        <externalId>true</externalId>
        <label>External SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTime__c</fullName>
        <label>OneTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParentTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
        <relationshipLabel>GSParent Transaction</relationshipLabel>
        <relationshipName>GSParentTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>GSReason</relationshipLabel>
        <relationshipName>GSReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Status</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>GSRenewal Status</relationshipLabel>
        <relationshipName>GSRenewalStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewedTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Transaction</label>
        <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
        <relationshipLabel>GSRenewed Transaction</relationshipLabel>
        <relationshipName>GSRenewedTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubscriptionEndDate__c</fullName>
        <label>Subscription EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubscriptionStartDate__c</fullName>
        <label>Subscription StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GS LRM Header</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GSLRMHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS LRM Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>